@@ -1,5 +1,8 @@
 2006-05-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/defs.in (Be Bourne compatible): Update from current
+	Autoconf.
+
 	* configure.ac: Recommend perl-5.8.2.
 	* tests/automake.test: Do not fail because of buggy Getopt::Long
 	in perl < 5.8.2.
